# Crackernaut

./: .copilotignore  .gitignore  AGENTS.md  COPILOT_SETUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  Implementation_plan.md  Instructions.txt  LICENSE  MARKDOWN_FIX_SUMMARY.md  MARKDOWN_GUIDE.md  README.md  README.txt  STRUCTURE.md  async_utils.py  config.json  config_utils.py  crackernaut-train.py  crackernaut.py  crackernaut_train.py  cuda_ml.py  distributed_training.py  list_preparer.py  ml_model.pth  performance_utils.py  pyproject.toml  requirements.txt  simple_cuda_test.py  simple_torch_test.py  test_structure.py  test_torch.py  test_torch_simple.py  test_variants.py  transformer_model.py  variant_utils.py  verify_fixes.py
.cspell/: custom-dictionary-workspace.txt
docs/: AGENTS.md  CHANGELOG.md  MARKDOWN_STYLE_GUIDE.md  PERSONAL_DATA_FIXES_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_REORGANIZATION_COMPLETE.md  PROJECT_REORGANIZATION_SUMMARY.md  README.md  SETUP.md  STRUCTURE.md
scripts/: check_gpu.py  check_staged_files.py  cleanup_before_commit.ps1  cleanup_before_commit.sh  cleanup_old_envs.py  cleanup_project.py  migrate_to_uv.py  setup.ps1  setup.sh
scripts/dev/: README.md  check_cuda.py  debug_torch.py  simple_torch_test.py
src/: __init__.py  cuda_ml.py  distributed_training.py  list_preparer.py
src/models/: __init__.py
src/models/embedding/: embedding_model.py
src/models/transformer/: transformer_model.py
src/utils/: __init__.py  async_utils.py  common_utils.py  config_utils.py  performance_utils.py  variant_utils.py
tests/: __init__.py  test_basic_functionality.py  test_crackernaut.py  test_imports.py  test_variants.py
